Design Principles examples
Add  T  and  Repository and OCP SRP examples.

--- a/MyWebNorthwind/MyWebNorthwind.csproj
+++ b/MyWebNorthwind/MyWebNorthwind.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\LSP\" />
+  </ItemGroup>
+
 </Project>
