--- a/MyWebNorthwind/appsettings.json
+++ b/MyWebNorthwind/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "System": "Warning"
     }
   },
   "AllowedHosts": "*",
